--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -15,7 +15,7 @@ style="width: 100%; height: 90vh; background-image: url('./static/RoboTrader.png
     style="background: var(--primary-bg); padding: 20px; border-radius: 10px; 
            text-align: center; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
     <h1>Welcome!</h1>
-    <p>Welcome to Strategy Factory! You can try and test your trading strategies 😊</p>
+    <p>Welcome to Strategy Factory! You can code, test and deploy your trading strategies 😊</p>
 
 </div>
 </div>
