--- a/app/templates/static/css/styles.css
+++ b/app/templates/static/css/styles.css
@@ -412,7 +412,7 @@ body.dark-mode textarea::placeholder {
     z-index: 1000;
 }
 
-#floating-favorite-button {
+.btn-circle {
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -424,7 +424,7 @@ body.dark-mode textarea::placeholder {
     transition: background-color 0.3s ease;
 }
 
-#floating-favorite-button:hover {
+.btn-circle:hover {
     background-color: #0056b3;
 }
 
