confirmation message in bot deployment

--- a/app/templates/backtest/view_bot_performance.html
+++ b/app/templates/backtest/view_bot_performance.html
@@ -26,6 +26,7 @@
             <button 
                 id="deploy-button" 
                 class="btn btn-primary btn-circle"
+                onclick="return confirm('Are you sure?')"
                 data-id="{{ performance.Id }}">
                 <i class="fas fa-rocket"></i>
             </button>
